[package]
authors = ["Leo Gaskin <leo.gaskin@le0.gs>"]
categories = ["cryptography", "network-programming", "web-programming"]
description = "Encrypted Content-Encoding (ECE) encryption and decryption implemented according to RFC8188"
edition = "2021"
homepage = "https://github.com/leotaku/web-push-native"
keywords = ["http-ece", "web-push", "ece", "rust-crypto"]
license = "MIT OR Apache-2.0"
name = "ece-native"
readme = "README.md"
repository = "https://github.com/leotaku/web-push-native"
version = "0.1.0"

[dependencies]
aes-gcm = "0.10.1"
hkdf = "0.12.3"
sha2 = "0.10.6"

[dev-dependencies]
base64 = "0.13.1"
once_cell = "1.15.0"
