[package]
authors = ["Leo Gaskin <leo.gaskin@le0.gs>"]
categories = ["cryptography", "network-programming", "web-programming"]
description = "Encrypted Content-Encoding (ECE) encryption and decryption implemented according to RFC8188"
edition = "2021"
homepage = "https://github.com/leotaku/web-push-native"
keywords = ["http-ece", "web-push", "ece", "rust-crypto"]
license = "MIT OR Apache-2.0"
name = "ece-native"
readme = "README.md"
repository = "https://github.com/leotaku/web-push-native"
rust-version = "1.60.0"
version = "0.3.0"

[dependencies]
aes-gcm = "0.10.3"
hkdf = "0.12.3"
sha2 = "0.10.8"

[dev-dependencies]
base64ct = { version = "1.6.0", features = ["alloc", "std"] }
once_cell = "1.18.0"
