[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
base64ct = { version = "1.8.0", features = ["alloc", "std"] }
hyper = { version = "1.6.0", features = ["full"] }
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.16", features = ["client"] }
once_cell = "1.21.3"
serde_json = "1.0.142"
tokio = { version = "1.47.0", features = ["macros", "rt-multi-thread"] }
tower-livereload = "0.9.6"
web-push-native = { path = "../web_push" }
