[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
base64ct = { version = "1.8.3", features = ["alloc", "std"] }
hyper = { version = "1.8.1", features = ["full"] }
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.20", features = ["client"] }
once_cell = "1.21.3"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tower-livereload = "0.10.2"
web-push-native = { path = "../web_push" }
