[package]
authors = ["Leo Gaskin <leo.gaskin@le0.gs>"]
categories = ["cryptography", "network-programming", "web-programming"]
description = "Generic Event Delivery Using Http Push (web-push) components implemented according to RFC8030"
edition = "2021"
homepage = "https://github.com/leotaku/web-push-native"
keywords = ["webpush", "web-push", "http-push", "rust-crypto"]
license = "MIT OR Apache-2.0"
name = "web-push-native"
readme = "README.md"
repository = "https://github.com/leotaku/web-push-native"
rust-version = "1.65.0"
version = "0.1.4"

[lib]
doctest = true

[features]
default = ["serialization", "vapid"]
serialization = ["dep:serde", "dep:base64ct"]
vapid = ["dep:jwt-simple", "dep:base64ct"]

[dependencies]
aes-gcm = "0.10.2"
base64ct = { version = "1.6.0", features = ["alloc", "std"], optional = true }
ece-native = { version = "0.1.4", path = "../ece" }
hkdf = "0.12.3"
http = "0.2.9"
jwt-simple = { version = "0.11.5", optional = true }
p256 = { version = "0.13.2", features = ["ecdh"] }
serde = { version = "1.0.163", features = ["derive"], optional = true }
sha2 = "0.10.6"

[dev-dependencies]
once_cell = "1.17.1"
serde_json = "1.0.96"
