[package]
authors = ["Leo Gaskin <leo.gaskin@le0.gs>"]
categories = ["cryptography", "network-programming", "web-programming"]
description = "Generic Event Delivery Using Http Push (web-push) components implemented according to RFC8030"
edition = "2021"
homepage = "https://github.com/leotaku/web-push-native"
keywords = ["webpush", "web-push", "http-push", "rust-crypto"]
license = "MIT OR Apache-2.0"
name = "web-push-native"
readme = "README.md"
repository = "https://github.com/leotaku/web-push-native"
rust-version = "1.66.1"
version = "0.4.0"

[lib]
doctest = true

[features]
default = ["serialization", "vapid"]
serialization = ["dep:serde", "dep:base64ct"]
vapid = ["dep:jwt-simple", "dep:base64ct"]

[dependencies]
aes-gcm = "0.10.3"
base64ct = { version = "1.6.0", features = ["alloc", "std"], optional = true }
ece-native = { version = "0.4.0", path = "../ece" }
hkdf = "0.12.4"
http = "1.1.0"
jwt-simple = { version = "0.12.10", default-features = false, features = ["pure-rust"], optional = true }
p256 = { version = "0.13.2", features = ["ecdh"] }
serde = { version = "1.0.210", features = ["derive"], optional = true }
sha2 = "0.10.8"

[dev-dependencies]
once_cell = "1.20.1"
serde_json = "1.0.128"
